# backend/src/routes/user/index.js
@@ -7,6 +7,15 @@ const { asyncHandler } = require("../../helpers/asyncHandler");
 const router = express.Router();
 
 router.use(authentication);
-router.route("/me").get(asyncHandler(getMe));
+router.route("/me").get(
+  // #swagger.tags = ['User']
+  // #swagger.summary = 'Get Me'
+  /* #swagger.security = [{
+      "apiKeyAuth": [],
+      "clientId": []
+    }] 
+  */
+  asyncHandler(getMe)
+);
 
 module.exports = router;
